--- a/workbooks/announcements_by_rir.ipynb
+++ b/workbooks/announcements_by_rir.ipynb
@@ -62,6 +62,24 @@
       "RIS dump contains row(s) with AS_SET! These will never be RPKI valid (https://tools.ietf.org/html/rfc6907#section-7.1.8)\n",
       "RIS dump contains row(s) with AS_SET! These will never be RPKI valid (https://tools.ietf.org/html/rfc6907#section-7.1.8)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'df_extended: (620758, 10)'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'df_riswhois: (1441595, 4)'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -78,7 +96,9 @@
     "        read_ris_dump('https://www.ris.ripe.net/dumps/riswhoisdump.IPv4.gz'),\n",
     "        read_ris_dump('https://www.ris.ripe.net/dumps/riswhoisdump.IPv6.gz')\n",
     "    ])\n",
-    "                "
+    "\n",
+    "display(f\"df_extended: {df_extended.shape}\")\n",
+    "display(f\"df_riswhois: {df_riswhois.shape}\")"
    ]
   },
   {
@@ -615,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "7df2077a-bd55-4799-a286-caa0bd8590f9",
    "metadata": {},
    "outputs": [
@@ -625,7 +645,7 @@
        "96624"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "0c20896d-1ec4-4ef1-8d91-437e48a2483a",
    "metadata": {},
    "outputs": [
@@ -645,7 +665,7 @@
       "text/plain": [
        "109354                 {(12975, 1.178.112.0/20, 364.0, 20)}\n",
        "109355                 {(12975, 1.178.128.0/20, 364.0, 20)}\n",
-       "109359    {(12975, 1.178.208.0/20, 361.0, 20), (12975, 1...\n",
+       "109359    {(12975, 1.178.220.0/22, 360.0, 22), (12975, 1...\n",
        "109360    {(12479, 1.178.224.0/20, 361.0, 20), (12479, 1...\n",
        "109363                  {(12975, 1.179.40.0/21, 363.0, 21)}\n",
        "                                ...                        \n",
@@ -657,7 +677,7 @@
        "Length: 96624, dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,17 +696,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "id": "6ad62d34-088e-49c2-b7aa-e25771242ce9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16.567238092422485"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "df_extended['announcements'] = df_extended.apply(lookup_filter, axis=1)"
+    "import time\n",
+    "\n",
+    "t0 = time.time()\n",
+    "df_extended['announcements'] = df_extended.apply(lookup_filter, axis=1)\n",
+    "df_extended['num_announcements'] = df_extended.announcements.apply(len)\n",
+    "display(time.time() - t0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "id": "0c8472b7-8ed1-4a89-b5a4-ed79ae3a9aab",
    "metadata": {},
    "outputs": [],
@@ -696,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "id": "69412857-8874-44f5-83df-152757ba5659",
    "metadata": {},
    "outputs": [
@@ -706,7 +741,7 @@
        "207122"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,8 +752,412 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "924ea8ad-9636-473a-a1ae-165af7dac9bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>announcements</th>\n",
+       "      <th>resource</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rir</th>\n",
+       "      <th>afi</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">afrinic</th>\n",
+       "      <th>ipv4</th>\n",
+       "      <td>31765</td>\n",
+       "      <td>5669</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ipv6</th>\n",
+       "      <td>1514</td>\n",
+       "      <td>7941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">apnic</th>\n",
+       "      <th>ipv4</th>\n",
+       "      <td>132741</td>\n",
+       "      <td>55287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ipv6</th>\n",
+       "      <td>35785</td>\n",
+       "      <td>105124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">arin</th>\n",
+       "      <th>ipv4</th>\n",
+       "      <td>164444</td>\n",
+       "      <td>80367</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ipv6</th>\n",
+       "      <td>20545</td>\n",
+       "      <td>82844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">iana</th>\n",
+       "      <th>ipv4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ipv6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">lacnic</th>\n",
+       "      <th>ipv4</th>\n",
+       "      <td>79592</td>\n",
+       "      <td>19929</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ipv6</th>\n",
+       "      <td>31627</td>\n",
+       "      <td>56326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">ripencc</th>\n",
+       "      <th>ipv4</th>\n",
+       "      <td>142411</td>\n",
+       "      <td>96624</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ipv6</th>\n",
+       "      <td>23112</td>\n",
+       "      <td>110498</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              announcements  resource\n",
+       "rir     afi                          \n",
+       "afrinic ipv4          31765      5669\n",
+       "        ipv6           1514      7941\n",
+       "apnic   ipv4         132741     55287\n",
+       "        ipv6          35785    105124\n",
+       "arin    ipv4         164444     80367\n",
+       "        ipv6          20545     82844\n",
+       "iana    ipv4              3        51\n",
+       "        ipv6              1        98\n",
+       "lacnic  ipv4          79592     19929\n",
+       "        ipv6          31627     56326\n",
+       "ripencc ipv4         142411     96624\n",
+       "        ipv6          23112    110498"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def rir_data(df: pd.DataFrame) -> int:\n",
+    "    return sum(map(len, df.to_list()))\n",
+    "\n",
+    "df_extended.groupby(['rir', 'afi'], observed=True).agg({'announcements': rir_data, 'resource': 'count'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "ed21e1e0-40b6-4379-a35c-e0c035d2dd3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0031709671020507812"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rir</th>\n",
+       "      <th>country</th>\n",
+       "      <th>afi</th>\n",
+       "      <th>raw_resource</th>\n",
+       "      <th>length</th>\n",
+       "      <th>date</th>\n",
+       "      <th>status</th>\n",
+       "      <th>opaque_id</th>\n",
+       "      <th>category</th>\n",
+       "      <th>resource</th>\n",
+       "      <th>announcements</th>\n",
+       "      <th>num_announcements</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>286229</th>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>ZZ</td>\n",
+       "      <td>ipv4</td>\n",
+       "      <td>193.96.236.0</td>\n",
+       "      <td>256</td>\n",
+       "      <td>2024-12-22 00:00:00+00:00</td>\n",
+       "      <td>reserved</td>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>e-stats</td>\n",
+       "      <td>193.96.236.0/24</td>\n",
+       "      <td>{(702, 193.96.0.0/13, 361.0, 13)}</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286337</th>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>ZZ</td>\n",
+       "      <td>ipv4</td>\n",
+       "      <td>193.99.153.0</td>\n",
+       "      <td>256</td>\n",
+       "      <td>2024-12-22 00:00:00+00:00</td>\n",
+       "      <td>reserved</td>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>e-stats</td>\n",
+       "      <td>193.99.153.0/24</td>\n",
+       "      <td>{(702, 193.96.0.0/13, 361.0, 13)}</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286358</th>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>ZZ</td>\n",
+       "      <td>ipv4</td>\n",
+       "      <td>193.99.249.0</td>\n",
+       "      <td>256</td>\n",
+       "      <td>2024-12-22 00:00:00+00:00</td>\n",
+       "      <td>reserved</td>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>e-stats</td>\n",
+       "      <td>193.99.249.0/24</td>\n",
+       "      <td>{(702, 193.96.0.0/13, 361.0, 13)}</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286450</th>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>ZZ</td>\n",
+       "      <td>ipv4</td>\n",
+       "      <td>193.101.167.0</td>\n",
+       "      <td>256</td>\n",
+       "      <td>2024-12-22 00:00:00+00:00</td>\n",
+       "      <td>reserved</td>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>e-stats</td>\n",
+       "      <td>193.101.167.0/24</td>\n",
+       "      <td>{(702, 193.96.0.0/13, 361.0, 13)}</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286455</th>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>ZZ</td>\n",
+       "      <td>ipv4</td>\n",
+       "      <td>193.101.180.0</td>\n",
+       "      <td>512</td>\n",
+       "      <td>2024-12-22 00:00:00+00:00</td>\n",
+       "      <td>reserved</td>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>e-stats</td>\n",
+       "      <td>193.101.180.0/23</td>\n",
+       "      <td>{(702, 193.96.0.0/13, 361.0, 13)}</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286498</th>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>ZZ</td>\n",
+       "      <td>ipv4</td>\n",
+       "      <td>193.102.74.0</td>\n",
+       "      <td>256</td>\n",
+       "      <td>2024-12-22 00:00:00+00:00</td>\n",
+       "      <td>reserved</td>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>e-stats</td>\n",
+       "      <td>193.102.74.0/24</td>\n",
+       "      <td>{(702, 193.96.0.0/13, 361.0, 13)}</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286552</th>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>ZZ</td>\n",
+       "      <td>ipv4</td>\n",
+       "      <td>193.102.208.0</td>\n",
+       "      <td>256</td>\n",
+       "      <td>2024-12-22 00:00:00+00:00</td>\n",
+       "      <td>reserved</td>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>e-stats</td>\n",
+       "      <td>193.102.208.0/24</td>\n",
+       "      <td>{(702, 193.96.0.0/13, 361.0, 13)}</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286581</th>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>ZZ</td>\n",
+       "      <td>ipv4</td>\n",
+       "      <td>193.103.164.0</td>\n",
+       "      <td>256</td>\n",
+       "      <td>2024-12-22 00:00:00+00:00</td>\n",
+       "      <td>reserved</td>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>e-stats</td>\n",
+       "      <td>193.103.164.0/24</td>\n",
+       "      <td>{(702, 193.96.0.0/13, 361.0, 13)}</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>296675</th>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>ZZ</td>\n",
+       "      <td>ipv4</td>\n",
+       "      <td>194.139.30.0</td>\n",
+       "      <td>256</td>\n",
+       "      <td>2024-12-22 00:00:00+00:00</td>\n",
+       "      <td>reserved</td>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>e-stats</td>\n",
+       "      <td>194.139.30.0/24</td>\n",
+       "      <td>{(702, 194.139.0.0/16, 361.0, 16)}</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>297728</th>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>ZZ</td>\n",
+       "      <td>ipv4</td>\n",
+       "      <td>194.173.169.0</td>\n",
+       "      <td>256</td>\n",
+       "      <td>2024-12-22 00:00:00+00:00</td>\n",
+       "      <td>reserved</td>\n",
+       "      <td>ripencc</td>\n",
+       "      <td>e-stats</td>\n",
+       "      <td>194.173.169.0/24</td>\n",
+       "      <td>{(702, 194.172.0.0/14, 361.0, 14)}</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            rir country   afi   raw_resource  length  \\\n",
+       "286229  ripencc      ZZ  ipv4   193.96.236.0     256   \n",
+       "286337  ripencc      ZZ  ipv4   193.99.153.0     256   \n",
+       "286358  ripencc      ZZ  ipv4   193.99.249.0     256   \n",
+       "286450  ripencc      ZZ  ipv4  193.101.167.0     256   \n",
+       "286455  ripencc      ZZ  ipv4  193.101.180.0     512   \n",
+       "286498  ripencc      ZZ  ipv4   193.102.74.0     256   \n",
+       "286552  ripencc      ZZ  ipv4  193.102.208.0     256   \n",
+       "286581  ripencc      ZZ  ipv4  193.103.164.0     256   \n",
+       "296675  ripencc      ZZ  ipv4   194.139.30.0     256   \n",
+       "297728  ripencc      ZZ  ipv4  194.173.169.0     256   \n",
+       "\n",
+       "                            date    status opaque_id category  \\\n",
+       "286229 2024-12-22 00:00:00+00:00  reserved   ripencc  e-stats   \n",
+       "286337 2024-12-22 00:00:00+00:00  reserved   ripencc  e-stats   \n",
+       "286358 2024-12-22 00:00:00+00:00  reserved   ripencc  e-stats   \n",
+       "286450 2024-12-22 00:00:00+00:00  reserved   ripencc  e-stats   \n",
+       "286455 2024-12-22 00:00:00+00:00  reserved   ripencc  e-stats   \n",
+       "286498 2024-12-22 00:00:00+00:00  reserved   ripencc  e-stats   \n",
+       "286552 2024-12-22 00:00:00+00:00  reserved   ripencc  e-stats   \n",
+       "286581 2024-12-22 00:00:00+00:00  reserved   ripencc  e-stats   \n",
+       "296675 2024-12-22 00:00:00+00:00  reserved   ripencc  e-stats   \n",
+       "297728 2024-12-22 00:00:00+00:00  reserved   ripencc  e-stats   \n",
+       "\n",
+       "                resource                       announcements  \\\n",
+       "286229   193.96.236.0/24   {(702, 193.96.0.0/13, 361.0, 13)}   \n",
+       "286337   193.99.153.0/24   {(702, 193.96.0.0/13, 361.0, 13)}   \n",
+       "286358   193.99.249.0/24   {(702, 193.96.0.0/13, 361.0, 13)}   \n",
+       "286450  193.101.167.0/24   {(702, 193.96.0.0/13, 361.0, 13)}   \n",
+       "286455  193.101.180.0/23   {(702, 193.96.0.0/13, 361.0, 13)}   \n",
+       "286498   193.102.74.0/24   {(702, 193.96.0.0/13, 361.0, 13)}   \n",
+       "286552  193.102.208.0/24   {(702, 193.96.0.0/13, 361.0, 13)}   \n",
+       "286581  193.103.164.0/24   {(702, 193.96.0.0/13, 361.0, 13)}   \n",
+       "296675   194.139.30.0/24  {(702, 194.139.0.0/16, 361.0, 16)}   \n",
+       "297728  194.173.169.0/24  {(702, 194.172.0.0/14, 361.0, 14)}   \n",
+       "\n",
+       "        num_announcements  \n",
+       "286229                  1  \n",
+       "286337                  1  \n",
+       "286358                  1  \n",
+       "286450                  1  \n",
+       "286455                  1  \n",
+       "286498                  1  \n",
+       "286552                  1  \n",
+       "286581                  1  \n",
+       "296675                  1  \n",
+       "297728                  1  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "t0 = time.time()\n",
+    "res = df_extended[(df_extended.rir == 'ripencc') & (df_extended.status != 'assigned') & (df_extended.num_announcements > 0)]\n",
+    "display(time.time() - t0)\n",
+    "display(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50a60d18-e432-414f-ab95-7bec807c1abb",
    "metadata": {},
    "outputs": [],
    "source": []
