ruff --fix the workbooks

--- a/workbooks/asn_ranges_delegated_extended.ipynb
+++ b/workbooks/asn_ranges_delegated_extended.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "import aiohttp\n",
     "\n",
-    "from rpki_analysis.delegated_stats import read_delegated_stats, read_delegated_extended_stats, PytriciaLookup, extract_resource"
+    "from rpki_analysis.delegated_stats import read_delegated_extended_stats, PytriciaLookup, extract_resource"
    ]
   },
   {
