--- a/workbooks/data_by_pseudonym.ipynb
+++ b/workbooks/data_by_pseudonym.ipynb
@@ -10,7 +10,8 @@
     "import aiohttp\n",
     "\n",
     "# Add parent dir to path\n",
-    "import os,sys\n",
+    "import os\n",
+    "import sys\n",
     "import io\n",
     "\n",
     "sys.path.insert(0,os.environ['PWD'])\n",
