--- a/workbooks/delegated_extended_parquet.ipynb
+++ b/workbooks/delegated_extended_parquet.ipynb
@@ -11,11 +11,10 @@
     "\n",
     "import netaddr\n",
     "\n",
-    "import pandas as pd\n",
     "\n",
     "import aiohttp\n",
     "\n",
-    "from rpki_analysis.delegated_stats import read_delegated_stats, read_delegated_extended_stats"
+    "from rpki_analysis.delegated_stats import read_delegated_extended_stats"
    ]
   },
   {
