--- a/workbooks/delegated_extended_parquet_minmax.ipynb
+++ b/workbooks/delegated_extended_parquet_minmax.ipynb
@@ -9,14 +9,12 @@
    "source": [
     "import io\n",
     "\n",
-    "import netaddr\n",
     "import ipaddress\n",
     "\n",
-    "import pandas as pd\n",
     "\n",
     "import aiohttp\n",
     "\n",
-    "from rpki_analysis.delegated_stats import read_delegated_stats, read_delegated_extended_stats"
+    "from rpki_analysis.delegated_stats import read_delegated_extended_stats"
    ]
   },
   {
