--- a/workbooks/riswhois_ip_utilisation.ipynb
+++ b/workbooks/riswhois_ip_utilisation.ipynb
@@ -18,7 +18,8 @@
    "outputs": [],
    "source": [
     "# Add parent dir to path\n",
-    "import os,sys\n",
+    "import os\n",
+    "import sys\n",
     "\n",
     "sys.path.insert(0,os.environ['PWD'])"
    ]
@@ -35,12 +36,11 @@
     "import ipaddress\n",
     "import netaddr\n",
     "\n",
-    "import altair as alt\n",
     "import pandas as pd\n",
     "import requests\n",
     "\n",
-    "from rpki_analysis.riswhois import RisWhoisLookup, read_ris_dump\n",
-    "from rpki_analysis.rov import RouteOriginAuthorizationLookup, rov_validity, rov_validity_verbose"
+    "from rpki_analysis.riswhois import read_ris_dump\n",
+    "from rpki_analysis.rov import RouteOriginAuthorizationLookup, rov_validity"
    ]
   },
   {
