--- a/workbooks/rpki_riswhois_atlas.ipynb
+++ b/workbooks/rpki_riswhois_atlas.ipynb
@@ -28,7 +28,8 @@
    "outputs": [],
    "source": [
     "# Add parent dir to path\n",
-    "import os,sys\n",
+    "import os\n",
+    "import sys\n",
     "\n",
     "sys.path.insert(0,os.environ['PWD'])"
    ]
@@ -52,7 +53,7 @@
     "\n",
     "from rpki_analysis.routinator import read_jsonext\n",
     "from rpki_analysis.riswhois import RisWhoisLookup, read_ris_dump\n",
-    "from rpki_analysis.rov import RouteOriginAuthorizationLookup, rov_validity, rov_validity_verbose"
+    "from rpki_analysis.rov import RouteOriginAuthorizationLookup, rov_validity"
    ]
   },
   {
