--- a/workbooks/rrdp_cloudfront_logs.ipynb
+++ b/workbooks/rrdp_cloudfront_logs.ipynb
@@ -23,7 +23,8 @@
    "outputs": [],
    "source": [
     "# Add parent dir to path\n",
-    "import os,sys\n",
+    "import os\n",
+    "import sys\n",
     "\n",
     "sys.path.insert(0,os.environ['PWD'])"
    ]
@@ -50,11 +51,9 @@
     "from rpki_analysis.rpsoftware import *\n",
     "\n",
     "import altair as alt\n",
-    "import numpy as np\n",
     "\n",
     "import datetime\n",
     "\n",
-    "import altair_saver\n",
     "alt.renderers.set_embed_options(scaleFactor=2)"
    ]
   },
