--- a/workbooks/rsync_logs.ipynb
+++ b/workbooks/rsync_logs.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "# Add parent dir to path\n",
-    "import os,sys\n",
+    "import os\n",
+    "import sys\n",
     "import datetime\n",
     "\n",
     "sys.path.insert(0,os.environ['PWD'])"
@@ -147,7 +148,6 @@
    "outputs": [],
    "source": [
     "# Get NLNog ring nodes\n",
-    "import json\n",
     "import requests\n",
     "\n",
     "nodes = requests.get(\"https://api.ring.nlnog.net/1.0/nodes\").json()\n",
@@ -1545,9 +1545,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import bz2\n",
-    "import json\n",
-    "import io\n",
     "import ipaddress\n",
     "import logging\n",
     "\n",
@@ -1558,7 +1555,6 @@
     "\n",
     "from typing import Generator, NamedTuple, Optional, Set\n",
     "\n",
-    "from pandas.api.types import CategoricalDtype\n",
     "from pandas.core.series import Series\n",
     "\n",
     "LOG = logging.getLogger(__name__)\n",
