--- a/workbooks/rpki_cover_on_date.ipynb
+++ b/workbooks/rpki_cover_on_date.ipynb
@@ -27,12 +27,10 @@
     "import netaddr\n",
     "import requests\n",
     "import bz2\n",
-    "import math\n",
     "\n",
     "from io import StringIO\n",
     "\n",
-    "import pandas as pd\n",
-    "import numpy as np"
+    "import pandas as pd"
    ]
   },
   {
