Fix lint errors in workbooks

--- a/workbooks/flutter_add_prefix_min_max_duck.ipynb
+++ b/workbooks/flutter_add_prefix_min_max_duck.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "9b85e701-2702-4e54-bc0b-c11ee846d8f4",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,15 @@
     "import duckdb\n",
     "import os.path\n",
     "\n",
+    "import ipaddress\n",
+    "import netaddr\n",
+    "\n",
     "FLUTTER_PARQUET = os.path.expanduser(\"~/src/ripe/rpki/rpki-flutter/data/*.parquet\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "38a83429-91f5-42f2-818a-5124edb20e98",
    "metadata": {},
    "outputs": [],
@@ -25,17 +28,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "62f931ac-b28e-43fc-8abe-f0577c4c4569",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/m4/qtvb8ff50ng0yw7xyt7t0n9c0000gp/T/ipykernel_22160/1647169654.py:15: DeprecationWarning: numpy.core is deprecated and has been renamed to numpy._core. The numpy._core namespace contains private NumPy internals and its use is discouraged, as NumPy internals can change without warning in any release. In practice, most real-world usage of numpy.core is to access functionality in the public NumPy API. If that is the case, use the public NumPy API. If not, you are using NumPy internals. If you would still like to access an internal attribute, use numpy._core.multiarray.\n",
+      "  duckdb.create_function(\"prefix_first\", prefix_first_to_bytes)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<duckdb.duckdb.DuckDBPyConnection at 0x103dd02b0>"
+       "<duckdb.duckdb.DuckDBPyConnection at 0x103bd8af0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "7ceed740-378b-4f24-9e50-ed424239c683",
    "metadata": {},
    "outputs": [
@@ -101,7 +112,7 @@
        "└───────────────────┘"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
