--- a/workbooks/lacnic_migration.ipynb
+++ b/workbooks/lacnic_migration.ipynb
@@ -23,17 +23,19 @@
     "import logging\n",
     "import lzma\n",
     "import tarfile\n",
+    "import urllib.parse\n",
     "\n",
     "from pathlib import Path\n",
     "\n",
     "import pandas as pd\n",
     "import requests\n",
     "\n",
-    "LOG = logging.getLogger(__name__)\n",
-    "logging.basicConfig()\n",
-    "LOG.setLevel(logging.DEBUG)\n",
+    "from rpki_analysis.routinator import read_csv, read_csvext\n",
     "\n",
-    "from rpki_analysis.routinator import read_csv, read_csvext"
+    "logging.basicConfig()\n",
+    "\n",
+    "LOG = logging.getLogger(__name__)\n",
+    "LOG.setLevel(logging.DEBUG)"
    ]
   },
   {
@@ -48,7 +50,6 @@
     "    \"http://josephine.sobornost.net/josephine.sobornost.net/rpkidata/2024/04/15/rpki-20240415T110540Z.tgz\"\n",
     "]\n",
     "\n",
-    "import urllib.parse\n",
     "\n",
     "csv_files = []\n",
     "\n",
@@ -643,7 +644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
