--- a/workbooks/asn_ranges_delegated_extended.ipynb
+++ b/workbooks/asn_ranges_delegated_extended.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "import io\n",
+    "from typing import Set\n",
     "\n",
     "import netaddr\n",
     "\n",
@@ -1531,9 +1532,7 @@
    "id": "18c6f8d2-9097-4b3d-9c0e-9ad3af96faa7",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
