--- a/workbooks/objects_per_ca_analysis.ipynb
+++ b/workbooks/objects_per_ca_analysis.ipynb
@@ -319,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_unmatched = df[df.containing_rir == None]"
+    "df_unmatched = df[df.containing_rir is None]"
    ]
   },
   {
@@ -2928,7 +2928,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
