--- a/workbooks/rrdp_cloudfront_logs.ipynb
+++ b/workbooks/rrdp_cloudfront_logs.ipynb
@@ -25,6 +25,10 @@
     "# Add parent dir to path\n",
     "import os\n",
     "import sys\n",
+    "import logging\n",
+    "\n",
+    "logging.basicConfig()\n",
+    "LOG = logging.getLogger(__name__)\n",
     "\n",
     "sys.path.insert(0,os.environ['PWD'])"
    ]
@@ -47,10 +51,11 @@
     }
    ],
    "source": [
-    "from rpki_analysis.cloudfrontlogs import *\n",
-    "from rpki_analysis.rpsoftware import *\n",
+    "from rpki_analysis.cloudfrontlogs import read_from_glob\n",
+    "from rpki_analysis.rpsoftware import group_clients, detailed_group_clients\n",
     "\n",
     "import altair as alt\n",
+    "import pandas as pd\n",
     "\n",
     "import datetime\n",
     "\n",
@@ -1204,7 +1209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
