--- a/workbooks/rsync_logs.ipynb
+++ b/workbooks/rsync_logs.ipynb
@@ -1704,13 +1704,13 @@
     "def origin_as(ip_str) -> str:\n",
     "    try:\n",
     "        return next(iter(sorted(lookup_afi(ip_str)))).origin\n",
-    "    except:\n",
+    "    except Exception:\n",
     "        return -1\n",
     "    \n",
     "def origin_prefix(ip_str) -> str:\n",
     "    try:\n",
     "        return next(iter(sorted(lookup_afi(ip_str)))).prefix\n",
-    "    except:\n",
+    "    except Exception:\n",
     "        return -1"
    ]
   },
@@ -1955,7 +1955,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
