update to consume .xz ROA CSV files

--- a/workbooks/rpki_cover_on_date.ipynb
+++ b/workbooks/rpki_cover_on_date.ipynb
@@ -35,12 +35,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "2a7c46d2-3eeb-41a5-8dfb-e72d2f62c3a0",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:14: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:17: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:14: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:17: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "/var/folders/m4/qtvb8ff50ng0yw7xyt7t0n9c0000gp/T/ipykernel_38391/2961649739.py:14: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "  roa_space_v4 = netaddr.IPSet(prefixes[prefixes.str.contains(\"\\.\")])\n",
+      "/var/folders/m4/qtvb8ff50ng0yw7xyt7t0n9c0000gp/T/ipykernel_38391/2961649739.py:17: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "  assert prefixes[prefixes.str.contains(\":\")].size + prefixes[prefixes.str.contains(\"\\.\")].size == prefixes.size\n"
+     ]
+    }
+   ],
    "source": [
     "def ipv4_prefix_from_row(row: pd.DataFrame) -> netaddr.IPRange:\n",
     "    start = netaddr.IPAddress(row.prefix)\n",
@@ -71,7 +86,7 @@
     "        names=['rir', 'country', 'afi', 'prefix', 'prefix_size', 'date', 'status', 'uuid'],\n",
     "        dtype={'rir': 'category', 'country': 'category',  'afi': 'category', 'prefix': str, 'size': int, 'date': str, 'status': 'category', 'uuid': str})\n",
     "\n",
-    "    df_delegated_extended.date = pd.to_datetime(df_delegated_extended.date, format='%Y-%m-%d %H:%M:%S')\n",
+    "    df_delegated_extended.date = pd.to_datetime(df_delegated_extended.date, format='%Y%m%d')\n",
     "    df_ripe_member_space = df_delegated_extended[(df_delegated_extended.status != 'available') & (df_delegated_extended.status != 'reserved')]\n",
     "\n",
     "\n",
@@ -113,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "2887f613-9a1a-4ba8-8b45-dee70777c4f7",
    "metadata": {
     "tags": []
@@ -127,136 +142,7 @@
       "ipv4 covered: 62.44%\n",
       "ipv6 covered: 37.19%\n"
      ]
-    }
-   ],
-   "source": [
-    "rpki_cover_stats(\n",
-    "    \"2023-07-01\",\n",
-    "        \"https://ftp.ripe.net/rpki/ripencc.tal/2023/07/01/roas.csv\",\n",
-    "    \"https://ftp.ripe.net/pub/stats/ripencc/2023/delegated-ripencc-extended-20230701.bz2\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "782d94dd-4a39-4f60-b611-1febfbd4cea0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-07-01\n",
-      "ipv4 covered: 54.75%\n",
-      "ipv6 covered: 34.17%\n"
-     ]
-    }
-   ],
-   "source": [
-    "rpki_cover_stats(\n",
-    "    \"2022-07-01\",\n",
-    "    \"https://ftp.ripe.net/rpki/ripencc.tal/2022/07/01/roas.csv\",\n",
-    "    \"https://ftp.ripe.net/pub/stats/ripencc/2022/delegated-ripencc-extended-20220701.bz2\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "b67732f0-556a-4ed9-a5b4-d3bb21b82f52",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2021-07-01\n",
-      "ipv4 covered: 48.77%\n",
-      "ipv6 covered: 32.49%\n"
-     ]
-    }
-   ],
-   "source": [
-    "rpki_cover_stats(\n",
-    "    \"2021-07-01\",\n",
-    "    \"https://ftp.ripe.net/rpki/ripencc.tal/2021/07/01/roas.csv\",\n",
-    "    \"https://ftp.ripe.net/pub/stats/ripencc/2021/delegated-ripencc-extended-20210701.bz2\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "b87878d4-09eb-4c86-8a60-3776e4df4fc2",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2020-07-01\n",
-      "ipv4 covered: 43.03%\n",
-      "ipv6 covered: 27.84%\n"
-     ]
-    }
-   ],
-   "source": [
-    "rpki_cover_stats(\n",
-    "    \"2020-07-01\",\n",
-    "    \"https://ftp.ripe.net/rpki/ripencc.tal/2020/07/01/roas.csv\",\n",
-    "    \"https://ftp.ripe.net/pub/stats/ripencc/2020/delegated-ripencc-extended-20200701.bz2\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9372c167-91be-4de5-adec-9e1bb97d009f",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "95dc94c7-a4a1-4462-aa6c-e6b5086f60fe",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2023-07-01\n",
-      "ipv4 covered: 62.44%\n",
-      "ipv6 covered: 37.19%\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_ripe_member_space = rpki_cover_stats(\n",
-    "    \"2023-07-01\",\n",
-    "        \"https://ftp.ripe.net/rpki/ripencc.tal/2023/07/01/roas.csv\",\n",
-    "    \"https://ftp.ripe.net/pub/stats/ripencc/2023/delegated-ripencc-extended-20230701.bz2\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "da48e425-643b-4ad3-9595-f168f838ec69",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -445,11 +331,99 @@
        "[156060 rows x 8 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "rpki_cover_stats(\n",
+    "    \"2023-07-01\",\n",
+    "        \"https://ftp.ripe.net/rpki/ripencc.tal/2023/07/01/roas.csv.xz\",\n",
+    "    \"https://ftp.ripe.net/pub/stats/ripencc/2023/delegated-ripencc-extended-20230701.bz2\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "782d94dd-4a39-4f60-b611-1febfbd4cea0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rpki_cover_stats(\n",
+    "    \"2022-07-01\",\n",
+    "    \"https://ftp.ripe.net/rpki/ripencc.tal/2022/07/01/roas.csv.xz\",\n",
+    "    \"https://ftp.ripe.net/pub/stats/ripencc/2022/delegated-ripencc-extended-20220701.bz2\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b67732f0-556a-4ed9-a5b4-d3bb21b82f52",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "rpki_cover_stats(\n",
+    "    \"2021-07-01\",\n",
+    "    \"https://ftp.ripe.net/rpki/ripencc.tal/2021/07/01/roas.csv.xz\",\n",
+    "    \"https://ftp.ripe.net/pub/stats/ripencc/2021/delegated-ripencc-extended-20210701.bz2\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b87878d4-09eb-4c86-8a60-3776e4df4fc2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "rpki_cover_stats(\n",
+    "    \"2020-07-01\",\n",
+    "    \"https://ftp.ripe.net/rpki/ripencc.tal/2020/07/01/roas.csv.xz\",\n",
+    "    \"https://ftp.ripe.net/pub/stats/ripencc/2020/delegated-ripencc-extended-20200701.bz2\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9372c167-91be-4de5-adec-9e1bb97d009f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95dc94c7-a4a1-4462-aa6c-e6b5086f60fe",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df_ripe_member_space = rpki_cover_stats(\n",
+    "    \"2023-07-01\",\n",
+    "        \"https://ftp.ripe.net/rpki/ripencc.tal/2023/07/01/roas.csv.xz\",\n",
+    "    \"https://ftp.ripe.net/pub/stats/ripencc/2023/delegated-ripencc-extended-20230701.bz2\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da48e425-643b-4ad3-9595-f168f838ec69",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "df_ripe_member_space"
    ]
@@ -479,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
